# trader-deprecated-5

./: .gitignore  Cargo.toml  README.md
src/: logger.rs  main.rs
src/indicators/: change.rs  corr.rs  cov.rs  cum.rs  mod.rs  norm.rs  sma.rs  stdev.rs
src/strategies/: custom.rs  mod.rs
src/trader/: coin.rs  fetcher.rs  investor.rs  mod.rs  position.rs  strategy.rs  wallet.rs
